# act4ed

./: .gitignore  .gitmodules  analysis.ipynb  apptainer.def  data.py  engaging.sh  engaging_gurobipy.sh  engaging_julia.sh  engaging_jump.sh  engaging_meshal.sh  evaluate_bird.ipynb  evaluate_service_network.ipynb  orcd-jlab.env  orcd-jlab.sh  pyproject.toml  run_jupyter_server.sh  test.ipynb
act4brd/: pyproject.toml
act4brd.mcdplib/: act4brd.graphvis.json  act4brd.mcdp  fleet.graphvis.json  fleet.mcdp  guideline.mcdp  service_network_design.graphvis.json
act4brd/act4brd/: constants.py  data.py  graph.py  plotting.py  settings.py
act4brd/act4brd/data_types/: brd_graph.py
act4brd/act4brd/toy_data/: __init__.py  demo_1.py  demo_2.py  demo_3.py
act4brd/act4brd/utils/: nx.py
act4brd/tests/: test_brd_graph.py
bus.mcdplib/: TODO.md  bus.mcdp  bus.mcdp_query.yaml  customer_experience.mcdp  demand.dpc.yaml  demand.mcdp_poset  fleet.mcdp  fleet.mcdp_poset  fleet_1.mcdp  fleet_2.mcdp  fleet_imp.dpc.yaml  fleet_imp.mcdp  guideline.dpc.yaml  guideline.mcdp  service_network_design.mcdp
data/: .gitignore  README.md  data.py  socialexplorer.txt
data/census/: .gitignore
experiments/: all.py  all_gurobi.py  all_gurobi_julia.py  chaining_test.py  chaining_test_julia.jl  chaining_test_julia_export.py  dc.py  existing_data.py  experiments.json  experiments.py  graph_sampling_and_route_finding copy.ipynb  helpers.py  initial.py  meshal.py  plots.py  solve_bird_backend_julia.jl  solve_formulation3_julia.jl  toy_network.ipynb
experiments/mcdp/: fleet.py  meshal.py  pareto.py  (+2 more)
formulation/: __init__.py  bird_adapter.py  common.py  formulation_3.ipynb  normalized_result.py  pruning.py  shortest_path.ipynb  shortest_path_multiple_destinations.ipynb  toy_network.py
framingham.mcdplib/: driver_interface.mcdp_interface  fleet_bus_count.mcdp  fleet_bus_count_interface.mcdp_interface  fleet_composition.mcdp_poset  fleet_interface.mcdp_interface  maintenance.mcdp  maintenance_interface.mcdp_interface  monitor_interface.mcdp_interface  routing.mcdp
julia/: Manifest.toml  Project.toml
mcdp/: act4brd.mcdp  customer_experience.mcdp  fleet.mcdp
mcdp.mcdplib/: customer_experience.graphvis.json  customer_experience.mcdp  guideline.graphvis.json  guideline.mcdp  service_network_design.mcdp
notebooks/: current_bus_routes.ipynb
routing.mcdplib/: driver.mcdp  fleet.mcdp  fleet_bus_count.mcdp  fuel.mcdp  fuel_interface.mcdp_interface  guidelines.mcdp  maintenance.mcdp  monitor.mcdp  routing.mcdp  routing_service.mcdp  routing_simple.mcdp_query.yaml  students_served.mcdp_poset
tests/: test_all_gurobi_julia.py  test_bird_adapter.py  test_common_service_graph.py  test_formulation3_julia_export.py  test_routing_solution_json.py
travel_time/: geocode_bus_stops.py  travel_time.ipynb
(+42 files in other folders)
