[project]
name = "superurop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mcdp-format2-py>=2.17.2507141632",
    "networkx[default]>=3.5",
    "pygris>=0.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]
