[project]
name = "superurop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mcdp-format2-py>=2.17.2507141632",
    "networkx[default]>=3.5",
    "pygris>=0.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "cvxpy[GLPK,GUROBI]>=1.7.3",
    "cvxopt>=1.3.2",
    "scipy>=1.16.3",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "branca>=0.8.2",
    "folium>=0.20.0",
    "mapclassify>=2.10.0",
    "contextily>=1.7.0",
    "r5py>=1.1.1",
    "osmnx>=2.1.0",
    "types-geopandas>=1.1.3.20260311",
    "types-networkx>=3.6.1.20260303",
    "pandas-stubs>=3.0.0.260204",
    "ipykernel>=7.2.0",
    "gurobipy>=13.0.1",
    "dataclasses-json>=0.6.7",
    "loguru>=0.7.3",
    "pytest>=9.0.3",
]

[tool.uv]
package = false
